// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|DesktopTopHeader Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fYiAbW jqszxS"
  >
    <div
      className="sc-fOKMvo kbvlaU"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-dUjcNx kcDznd"
          >
            <a
              className="sc-eilVRo sc-eerKOB gowMTo"
              href="/"
              onClick={[Function]}
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "16px",
                    "width": "96px",
                  }
                }
                viewBox="0 0 96 16"
              >
                <path
                  d="M6.198 2.522c2.414 0 3.823 1.074 4.018 3.192H7.982c-.15-.97-.72-1.417-1.784-1.417-1.065 0-1.604.492-1.604 1.208 0 .76.345 1.119 1.994 1.358 2.593.328 3.928 1.029 3.928 3.236 0 1.895-1.56 3.401-4.093 3.401-2.939 0-4.288-1.372-4.423-3.505h2.324c.105.954.51 1.745 2.099 1.745 1.064 0 1.769-.582 1.769-1.417 0-.85-.45-1.149-2.024-1.387C3.424 8.578 2.3 7.757 2.3 5.699c0-1.82 1.53-3.177 3.898-3.177zm49.716 2.834c1.919 0 3.283.776 3.283 2.894v5.086h-2.114v-.94c-.45.627-1.14 1.104-2.369 1.104-1.424 0-2.624-.686-2.624-2.327 0-1.82 1.68-2.506 4.079-2.506h.884v-.313c0-.925-.285-1.432-1.274-1.432-.855 0-1.245.433-1.335 1.104H52.39c.135-1.85 1.605-2.67 3.524-2.67zm-22.4 0c2.025 0 3.824 1.178 3.824 3.968v.596h-5.653c.06 1.298.765 2.044 1.95 2.044 1.004 0 1.499-.433 1.634-1.09h2.054c-.255 1.686-1.604 2.626-3.748 2.626-2.37 0-4.093-1.477-4.093-3.968v-.119c0-2.461 1.754-4.057 4.033-4.057zm-17.87 0c1.813 0 3.493.79 3.688 3.028h-2.054c-.15-.91-.705-1.328-1.59-1.328-1.124 0-1.874.836-1.874 2.327v.12c0 1.566.705 2.371 1.92 2.371.869 0 1.574-.507 1.678-1.506h1.965c-.12 1.85-1.47 3.132-3.749 3.132-2.294 0-4.033-1.417-4.033-3.968v-.119c0-2.52 1.814-4.057 4.048-4.057zm74.698-2.79c1.904 0 3.043.94 3.298 2.522h-.51c-.254-1.313-1.124-2.074-2.788-2.074-1.754 0-2.804.79-2.804 2.238 0 1.253.705 1.939 2.954 2.267C92.92 7.877 94 8.503 94 10.502c0 1.626-1.32 2.938-3.523 2.938-2.504 0-3.673-1.342-3.898-3.042h.524c.21 1.402 1.11 2.58 3.374 2.58 1.889 0 2.983-1.06 2.983-2.461 0-1.656-.824-2.178-3.043-2.506-2.4-.343-3.404-1.163-3.404-2.73 0-1.655 1.335-2.714 3.329-2.714zm-22.19 0c2.19 0 3.929 1.134 4.304 3.223h-.54c-.375-1.76-1.694-2.775-3.763-2.775-2.52 0-4.408 2.029-4.408 4.922v.12c0 2.968 1.724 4.922 4.423 4.922 2.039 0 3.538-1.119 3.928-2.998h.494c-.404 2.193-2.173 3.46-4.437 3.46-3.014 0-4.963-2.192-4.963-5.37v-.119c0-3.147 2.219-5.384 4.963-5.384zm-19.99 2.79c1.455 0 2.58.91 2.58 2.983v4.997h-2.16V8.578c0-1-.45-1.447-1.23-1.447-.839 0-1.513.537-1.513 1.596v4.609h-2.16V8.578c0-1-.464-1.447-1.229-1.447-.84 0-1.514.537-1.514 1.596v4.609h-2.174V5.535h2.174v1.193c.39-.73 1.23-1.372 2.399-1.372 1.034 0 1.814.433 2.189 1.357.63-.94 1.649-1.357 2.638-1.357zM22.915 2v4.773c.39-.776 1.244-1.417 2.549-1.417 1.544 0 2.638.925 2.638 3.013v4.967h-2.174V8.682c0-1.059-.42-1.566-1.379-1.566-.93 0-1.634.567-1.634 1.715v4.505H20.74V2h2.174zm52.554.671l4.078 9.68 4.153-9.68h.795v10.665h-.54V3.313l-4.318 10.023h-.21L75.184 3.313v10.023h-.51V2.67h.795zm-18.416 7.28h-.84c-1.259 0-1.994.268-1.994 1.103 0 .567.345.94 1.14.94.96 0 1.694-.523 1.694-1.388V9.95zM33.515 6.847c-.975 0-1.635.641-1.8 1.745h3.509c-.075-1.179-.675-1.745-1.71-1.745zm27.752-4.455l.412 1.1.42-1.1h.917v2.234h-.763V3.353l-.504 1.274h-.23l-.497-1.274v1.274h-.651V2.393h.896zm-1.169 0v.584h-.58v1.65h-.75v-1.65h-.58v-.584h1.91z"
                />
              </svg>
            </a>
            <div
              className="sc-gHboQg gEXDzn"
            >
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/logout"
                onClick={[Function]}
              >
                <div
                  style={
                    Object {
                      "border": "solid 1px #FFF",
                      "height": "20px",
                      "width": "15px",
                    }
                  }
                />
              </a>
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/user/me"
                onClick={[Function]}
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-fBuWsC eeihxG"
        >
          <div
            className="sc-jhAzac hmXDXQ"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              SchemaCMS
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Menu
            </h1>
          </div>
        </div>
        <div
          className="sc-fMiknA dDuaDM"
        >
          <ul
            className="sc-dVhcbM sc-eqIVtm dnkudp"
          >
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Data Sources
              </a>
            </li>
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Charts
              </a>
            </li>
          </ul>
          <ul
            className="sc-dVhcbM sc-fAjcbJ ggeeow"
          >
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
            >
              <a
                href="/logout"
                id={null}
                onClick={[Function]}
              >
                Log Out
              </a>
            </li>
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
              id="id"
              onClick={[Function]}
            >
              Click action
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|DesktopTopHeader With long title 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fYiAbW jqszxS"
  >
    <div
      className="sc-fOKMvo kbvlaU"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-dUjcNx kcDznd"
          >
            <a
              className="sc-eilVRo sc-eerKOB gowMTo"
              href="/"
              onClick={[Function]}
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "16px",
                    "width": "96px",
                  }
                }
                viewBox="0 0 96 16"
              >
                <path
                  d="M6.198 2.522c2.414 0 3.823 1.074 4.018 3.192H7.982c-.15-.97-.72-1.417-1.784-1.417-1.065 0-1.604.492-1.604 1.208 0 .76.345 1.119 1.994 1.358 2.593.328 3.928 1.029 3.928 3.236 0 1.895-1.56 3.401-4.093 3.401-2.939 0-4.288-1.372-4.423-3.505h2.324c.105.954.51 1.745 2.099 1.745 1.064 0 1.769-.582 1.769-1.417 0-.85-.45-1.149-2.024-1.387C3.424 8.578 2.3 7.757 2.3 5.699c0-1.82 1.53-3.177 3.898-3.177zm49.716 2.834c1.919 0 3.283.776 3.283 2.894v5.086h-2.114v-.94c-.45.627-1.14 1.104-2.369 1.104-1.424 0-2.624-.686-2.624-2.327 0-1.82 1.68-2.506 4.079-2.506h.884v-.313c0-.925-.285-1.432-1.274-1.432-.855 0-1.245.433-1.335 1.104H52.39c.135-1.85 1.605-2.67 3.524-2.67zm-22.4 0c2.025 0 3.824 1.178 3.824 3.968v.596h-5.653c.06 1.298.765 2.044 1.95 2.044 1.004 0 1.499-.433 1.634-1.09h2.054c-.255 1.686-1.604 2.626-3.748 2.626-2.37 0-4.093-1.477-4.093-3.968v-.119c0-2.461 1.754-4.057 4.033-4.057zm-17.87 0c1.813 0 3.493.79 3.688 3.028h-2.054c-.15-.91-.705-1.328-1.59-1.328-1.124 0-1.874.836-1.874 2.327v.12c0 1.566.705 2.371 1.92 2.371.869 0 1.574-.507 1.678-1.506h1.965c-.12 1.85-1.47 3.132-3.749 3.132-2.294 0-4.033-1.417-4.033-3.968v-.119c0-2.52 1.814-4.057 4.048-4.057zm74.698-2.79c1.904 0 3.043.94 3.298 2.522h-.51c-.254-1.313-1.124-2.074-2.788-2.074-1.754 0-2.804.79-2.804 2.238 0 1.253.705 1.939 2.954 2.267C92.92 7.877 94 8.503 94 10.502c0 1.626-1.32 2.938-3.523 2.938-2.504 0-3.673-1.342-3.898-3.042h.524c.21 1.402 1.11 2.58 3.374 2.58 1.889 0 2.983-1.06 2.983-2.461 0-1.656-.824-2.178-3.043-2.506-2.4-.343-3.404-1.163-3.404-2.73 0-1.655 1.335-2.714 3.329-2.714zm-22.19 0c2.19 0 3.929 1.134 4.304 3.223h-.54c-.375-1.76-1.694-2.775-3.763-2.775-2.52 0-4.408 2.029-4.408 4.922v.12c0 2.968 1.724 4.922 4.423 4.922 2.039 0 3.538-1.119 3.928-2.998h.494c-.404 2.193-2.173 3.46-4.437 3.46-3.014 0-4.963-2.192-4.963-5.37v-.119c0-3.147 2.219-5.384 4.963-5.384zm-19.99 2.79c1.455 0 2.58.91 2.58 2.983v4.997h-2.16V8.578c0-1-.45-1.447-1.23-1.447-.839 0-1.513.537-1.513 1.596v4.609h-2.16V8.578c0-1-.464-1.447-1.229-1.447-.84 0-1.514.537-1.514 1.596v4.609h-2.174V5.535h2.174v1.193c.39-.73 1.23-1.372 2.399-1.372 1.034 0 1.814.433 2.189 1.357.63-.94 1.649-1.357 2.638-1.357zM22.915 2v4.773c.39-.776 1.244-1.417 2.549-1.417 1.544 0 2.638.925 2.638 3.013v4.967h-2.174V8.682c0-1.059-.42-1.566-1.379-1.566-.93 0-1.634.567-1.634 1.715v4.505H20.74V2h2.174zm52.554.671l4.078 9.68 4.153-9.68h.795v10.665h-.54V3.313l-4.318 10.023h-.21L75.184 3.313v10.023h-.51V2.67h.795zm-18.416 7.28h-.84c-1.259 0-1.994.268-1.994 1.103 0 .567.345.94 1.14.94.96 0 1.694-.523 1.694-1.388V9.95zM33.515 6.847c-.975 0-1.635.641-1.8 1.745h3.509c-.075-1.179-.675-1.745-1.71-1.745zm27.752-4.455l.412 1.1.42-1.1h.917v2.234h-.763V3.353l-.504 1.274h-.23l-.497-1.274v1.274h-.651V2.393h.896zm-1.169 0v.584h-.58v1.65h-.75v-1.65h-.58v-.584h1.91z"
                />
              </svg>
            </a>
            <div
              className="sc-cpmLhU jQEsNw"
            >
              <h1
                className="sc-dymIpo eVxDhB"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

              </h1>
            </div>
            <div
              className="sc-gHboQg gEXDzn"
            >
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/logout"
                onClick={[Function]}
              >
                <div
                  style={
                    Object {
                      "border": "solid 1px #FFF",
                      "height": "20px",
                      "width": "15px",
                    }
                  }
                />
              </a>
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/user/me"
                onClick={[Function]}
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-fBuWsC eeihxG"
        >
          <div
            className="sc-jhAzac hmXDXQ"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              SchemaCMS
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Menu
            </h1>
          </div>
        </div>
        <div
          className="sc-fMiknA dDuaDM"
        >
          <ul
            className="sc-dVhcbM sc-eqIVtm dnkudp"
          >
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Data Sources
              </a>
            </li>
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Charts
              </a>
            </li>
          </ul>
          <ul
            className="sc-dVhcbM sc-fAjcbJ ggeeow"
          >
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
            >
              <a
                href="/logout"
                id={null}
                onClick={[Function]}
              >
                Log Out
              </a>
            </li>
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
              id="id"
              onClick={[Function]}
            >
              Click action
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|DesktopTopHeader With title 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-fYiAbW jqszxS"
  >
    <div
      className="sc-fOKMvo kbvlaU"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "padding": null,
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-dUjcNx kcDznd"
          >
            <a
              className="sc-eilVRo sc-eerKOB gowMTo"
              href="/"
              onClick={[Function]}
            >
              <svg
                style={
                  Object {
                    "fill": "#FFF",
                    "height": "16px",
                    "width": "96px",
                  }
                }
                viewBox="0 0 96 16"
              >
                <path
                  d="M6.198 2.522c2.414 0 3.823 1.074 4.018 3.192H7.982c-.15-.97-.72-1.417-1.784-1.417-1.065 0-1.604.492-1.604 1.208 0 .76.345 1.119 1.994 1.358 2.593.328 3.928 1.029 3.928 3.236 0 1.895-1.56 3.401-4.093 3.401-2.939 0-4.288-1.372-4.423-3.505h2.324c.105.954.51 1.745 2.099 1.745 1.064 0 1.769-.582 1.769-1.417 0-.85-.45-1.149-2.024-1.387C3.424 8.578 2.3 7.757 2.3 5.699c0-1.82 1.53-3.177 3.898-3.177zm49.716 2.834c1.919 0 3.283.776 3.283 2.894v5.086h-2.114v-.94c-.45.627-1.14 1.104-2.369 1.104-1.424 0-2.624-.686-2.624-2.327 0-1.82 1.68-2.506 4.079-2.506h.884v-.313c0-.925-.285-1.432-1.274-1.432-.855 0-1.245.433-1.335 1.104H52.39c.135-1.85 1.605-2.67 3.524-2.67zm-22.4 0c2.025 0 3.824 1.178 3.824 3.968v.596h-5.653c.06 1.298.765 2.044 1.95 2.044 1.004 0 1.499-.433 1.634-1.09h2.054c-.255 1.686-1.604 2.626-3.748 2.626-2.37 0-4.093-1.477-4.093-3.968v-.119c0-2.461 1.754-4.057 4.033-4.057zm-17.87 0c1.813 0 3.493.79 3.688 3.028h-2.054c-.15-.91-.705-1.328-1.59-1.328-1.124 0-1.874.836-1.874 2.327v.12c0 1.566.705 2.371 1.92 2.371.869 0 1.574-.507 1.678-1.506h1.965c-.12 1.85-1.47 3.132-3.749 3.132-2.294 0-4.033-1.417-4.033-3.968v-.119c0-2.52 1.814-4.057 4.048-4.057zm74.698-2.79c1.904 0 3.043.94 3.298 2.522h-.51c-.254-1.313-1.124-2.074-2.788-2.074-1.754 0-2.804.79-2.804 2.238 0 1.253.705 1.939 2.954 2.267C92.92 7.877 94 8.503 94 10.502c0 1.626-1.32 2.938-3.523 2.938-2.504 0-3.673-1.342-3.898-3.042h.524c.21 1.402 1.11 2.58 3.374 2.58 1.889 0 2.983-1.06 2.983-2.461 0-1.656-.824-2.178-3.043-2.506-2.4-.343-3.404-1.163-3.404-2.73 0-1.655 1.335-2.714 3.329-2.714zm-22.19 0c2.19 0 3.929 1.134 4.304 3.223h-.54c-.375-1.76-1.694-2.775-3.763-2.775-2.52 0-4.408 2.029-4.408 4.922v.12c0 2.968 1.724 4.922 4.423 4.922 2.039 0 3.538-1.119 3.928-2.998h.494c-.404 2.193-2.173 3.46-4.437 3.46-3.014 0-4.963-2.192-4.963-5.37v-.119c0-3.147 2.219-5.384 4.963-5.384zm-19.99 2.79c1.455 0 2.58.91 2.58 2.983v4.997h-2.16V8.578c0-1-.45-1.447-1.23-1.447-.839 0-1.513.537-1.513 1.596v4.609h-2.16V8.578c0-1-.464-1.447-1.229-1.447-.84 0-1.514.537-1.514 1.596v4.609h-2.174V5.535h2.174v1.193c.39-.73 1.23-1.372 2.399-1.372 1.034 0 1.814.433 2.189 1.357.63-.94 1.649-1.357 2.638-1.357zM22.915 2v4.773c.39-.776 1.244-1.417 2.549-1.417 1.544 0 2.638.925 2.638 3.013v4.967h-2.174V8.682c0-1.059-.42-1.566-1.379-1.566-.93 0-1.634.567-1.634 1.715v4.505H20.74V2h2.174zm52.554.671l4.078 9.68 4.153-9.68h.795v10.665h-.54V3.313l-4.318 10.023h-.21L75.184 3.313v10.023h-.51V2.67h.795zm-18.416 7.28h-.84c-1.259 0-1.994.268-1.994 1.103 0 .567.345.94 1.14.94.96 0 1.694-.523 1.694-1.388V9.95zM33.515 6.847c-.975 0-1.635.641-1.8 1.745h3.509c-.075-1.179-.675-1.745-1.71-1.745zm27.752-4.455l.412 1.1.42-1.1h.917v2.234h-.763V3.353l-.504 1.274h-.23l-.497-1.274v1.274h-.651V2.393h.896zm-1.169 0v.584h-.58v1.65h-.75v-1.65h-.58v-.584h1.91z"
                />
              </svg>
            </a>
            <div
              className="sc-cpmLhU jQEsNw"
            >
              <h1
                className="sc-dymIpo eVxDhB"
                style={
                  Object {
                    "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                    "fontSize": "24px",
                    "fontWeight": 600,
                    "letterSpacing": "-0.12px",
                    "lineHight": 1.25,
                    "margin": 0,
                  }
                }
              >
                Projects
              </h1>
            </div>
            <div
              className="sc-gHboQg gEXDzn"
            >
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/logout"
                onClick={[Function]}
              >
                <div
                  style={
                    Object {
                      "border": "solid 1px #FFF",
                      "height": "20px",
                      "width": "15px",
                    }
                  }
                />
              </a>
              <a
                className="sc-eilVRo sc-emmjRN ioPyiL"
                href="/user/me"
                onClick={[Function]}
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "28px",
                      "width": "28px",
                    }
                  }
                  viewBox="0 0 28 28"
                >
                  <defs>
                    <path
                      d="M0 0h24.034v24.034H0z"
                      id="user_svg__a"
                    />
                  </defs>
                  <g
                    fillRule="evenodd"
                    transform="translate(1.867 1.867)"
                  >
                    <mask
                      fill="#fff"
                      id="user_svg__b"
                    >
                      <use
                        xlinkHref="#user_svg__a"
                      />
                    </mask>
                    <path
                      d="M4.138 19.57c1.38-.552 2.677-1.04 3.948-1.588 1.495-.646 1.735-1.708.889-3.134-.632-1.065-1.361-2.162-1.616-3.34-.284-1.311-.117-2.73-.081-4.1.068-2.682 1.755-4.263 4.561-4.268 2.074-.004 5.335 1.606 5.025 4.192-.274 2.283.356 4.774-1.347 6.785-.193.229-.308.523-.474.777-.886 1.37-.568 2.463.95 3.104 1.273.537 2.566 1.029 3.863 1.545 4.067-3.565 4.198-10.59.257-14.93C15.993.079 8.887-.158 4.432 4.09.044 8.275-.1 15.32 4.138 19.57M0 11.9C.053 5.289 5.524-.063 12.165 0c6.606.064 11.94 5.543 11.868 12.195-.07 6.542-5.517 11.874-12.098 11.84C5.326 24-.052 18.531 0 11.9"
                      mask="url(#user_svg__b)"
                    />
                  </g>
                </svg>
              </a>
            </div>
          </div>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderOpenMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "flex": "0 0 auto",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": null,
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-fBuWsC eeihxG"
        >
          <div
            className="sc-jhAzac hmXDXQ"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              SchemaCMS
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Menu
            </h1>
          </div>
        </div>
        <div
          className="sc-fMiknA dDuaDM"
        >
          <ul
            className="sc-dVhcbM sc-eqIVtm dnkudp"
          >
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Data Sources
              </a>
            </li>
            <li
              className="sc-caSCKo sc-gisBJw fjmWZk"
            >
              <a
                href="/path"
                id={null}
                onClick={[Function]}
              >
                Charts
              </a>
            </li>
          </ul>
          <ul
            className="sc-dVhcbM sc-fAjcbJ ggeeow"
          >
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
            >
              <a
                href="/logout"
                id={null}
                onClick={[Function]}
              >
                Log Out
              </a>
            </li>
            <li
              className="sc-caSCKo sc-kjoXOD bxzQyw"
              id="id"
              onClick={[Function]}
            >
              Click action
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="desktopTopHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
